<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailLaporanActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/black"

                app:titleTextAppearance="@style/ToolbarTitleText"/>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/imagedetail"
                android:scaleType="centerCrop"
                android:transitionName="image"
                tools:srcCompat ="@tools:sample/avatars"/>
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvtempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/young_grey"
        app:layout_constraintTop_toBottomOf="@+id/cv_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/pelaporTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="15sp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tempat"/>
        <TextView
            android:id="@+id/tempat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tempat"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pelaporTv"
            app:layout_constraintEnd_toStartOf="@+id/view1"/>
            <View
                android:id="@+id/view1"
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:layout_margin="10dp"
                android:background="@color/sedikittuagrey"
                app:layout_constraintStart_toEndOf="@+id/tempat"
                app:layout_constraintTop_toTopOf="@+id/tempat"
                app:layout_constraintBottom_toBottomOf="@+id/tempat"
                app:layout_constraintEnd_toStartOf="@+id/tanggalTv"/>
            <TextView
                android:id="@+id/tanggalTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tanggal"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toBottomOf="@id/pelaporTv"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/namaTempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tempat"
            android:textSize="14sp"
            android:maxLines="1"
            android:gravity="top|start"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/tempat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/sedikittuagrey"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/namaTempat"/>
            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/deskripsi"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/isiDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/deskripsiadd"
                android:textSize="11sp"
                android:gravity="top|start"
                android:maxLines="7"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/deskripsi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/young_grey"
        app:layout_constraintTop_toBottomOf="@+id/cvtempat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/isiStatus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/isiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/status"
            app:layout_constraintStart_toEndOf="@+id/statusTv"
            app:layout_constraintTop_toTopOf="@+id/statusTv"
            app:layout_constraintBottom_toBottomOf="@+id/statusTv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/locationBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/location"
                    app:layout_constraintTop_toBottomOf="@+id/cvStatus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/tolakbtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/tolak"
                    android:backgroundTint="@color/mainColor"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintTop_toBottomOf="@+id/locationBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/terimabtn"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:id="@+id/terimabtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/terima"
                    android:backgroundTint="@color/hijauterang"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationBtn"
                    app:layout_constraintStart_toEndOf="@+id/tolakbtn"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>